Working on templating

--- a/src/main/webapp/WEB-INF/templates/error.html
+++ b/src/main/webapp/WEB-INF/templates/error.html
@@ -5,7 +5,7 @@
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-	<link rel="stylesheet" type="text/css" media="all" href="/css/myStyle.css" th:href="@{/css/myStyle.css}" />
+	<link rel="stylesheet" type="text/css" media="all" href="/css/global.css" th:href="@{/css/global.css}" />
 	<link rel="stylesheet" type="text/css" media="all" href="/css/error.css" th:href="@{/css/error.css}" />
 	<title>Error page</title>
 </head>
