--- a/src/main/webapp/WEB-INF/templates/login.html
+++ b/src/main/webapp/WEB-INF/templates/login.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Login Page</title>
 
-    <link rel="stylesheet" type="text/css" media="all" href="/css/myStyle.css" th:href="@{/css/myStyle.css}" />
-    <link rel="stylesheet" type="text/css" media="all" href="/css/login.css" th:href="@{/css/login.css}" />
+    <link rel="stylesheet" type="text/css" media="all" href="../../css/global.css" th:href="@{/css/global.css}" />
+    <link rel="stylesheet" type="text/css" media="all" href="../../css/login.css" th:href="@{/css/login.css}" />
 
     <link rel="icon" type="image/ico" th:href="@{/images/website-icon.ico}"/>
 
@@ -23,54 +23,70 @@
     </header>
 
 
-<div class="container">
+<div class="forms-container">
 
-    <div class="login" >
-        <form th:action="@{/login}" method="POST" class="styled-form-button" >
+    <div class="login green-div" >
+        <form th:action="@{/login}" method="POST"  >
             <fieldset>
-                <legend>Login form</legend>
+                <legend class="title">Login form</legend>
                 <div class="form-group">
                     <label for="email">Email</label>
                     <input type="email" name="email" value="sangeniti.ss@gmail.com" required>
                 </div>
-                <div>
-                    <label for="email">Password</label>
+                <div class="form-group">
+                    <label for="password">Password</label>
                     <input type="password" name="password"  value="password1234" required minlength="6">
                 </div>
-                <button type="submit">Login</button>
+                <button class="btn btn-medium btn-green" type="submit">Login</button>
             </fieldset>
         </form>
-        <div class="" th:if="${loginErrorMessage}">
+        <div id="loginErrorMessage" class="bold_info" th:if="${loginErrorMessage}">
             <span th:text="${loginErrorMessage}">Email or password not valid!</span>
         </div>
     </div>
 
-    <div class="signup" >
-        <form th:action="@{/signup}" method="POST" class="styled-form-button" >
+    <div class="signup green-div" >
+        <form th:action="@{/signup}" method="POST" >
             <fieldset>
-                <legend>Signup form</legend>
-                E-mail: <input type="email" name="email" required >
-                <br>
-                Password: <input type="password" name="password" required minlength="6">
-                <br>
-                Name: <input type="text" name="firstName" required>
-                <br>
-                Surname: <input type="text" name="lastName" required >
-                <br>
-                Address: <input type="text" name="address" required>
-                <br>
-                City: <input type="text" name="addrCity" required>
-                <br>
-                State: <input type="text" name="addrState" required >
-                <br>
-                Phone: <input type="tel" name="addrPhone" required>
-                <br>
-                <input type="submit" value="Sign up!">
-                <div class="" th:if="${signupErrorMessage}">
-                    <span th:text="${signupErrorMessage}">Email or password not valid!</span>
+                <legend class="title">Signup form</legend>
+                <div class="form-group">
+                    <label for="email">Email</label>
+                    <input type="email" name="email" value="sangeniti.ss@gmail.com" required>
                 </div>
+                <div class="form-group">
+                    <label for="password">Password</label>
+                    <input type="password" name="password" required minlength="6">
+                </div>
+                <div class="form-group">
+                    <label for="firstName">Name</label>
+                    <input type="text" name="firstName" required>
+                </div>
+                <div class="form-group">
+                    <label for="lastName">Surname</label>
+                    <input type="text" name="lastName" required >
+                </div>
+                <div class="form-group">
+                    <label for="address">Address</label>
+                    <input type="text" name="address" required>
+                </div>
+                <div class="form-group">
+                    <label for="addrCity">City</label>
+                    <input type="text" name="addrCity" required>
+                </div>
+                <div class="form-group">
+                    <label for="addrState">State</label>
+                    <input type="text" name="addrState" required >
+                </div>
+                <div class="form-group">
+                    <label for="addrPhone">Phone</label>
+                    <input type="tel" name="addrPhone" required>
+                </div>
+                <button class="btn btn-medium btn-green" type="submit">Sign up</button>
             </fieldset>
         </form>
+        <div id="signupErrorMessage" class="bold_info" th:if="${signupErrorMessage}">
+            <span th:text="${signupErrorMessage}">Email or password not valid!</span>
+        </div>
     </div>
 </div>
 
