--- a/src/main/webapp/WEB-INF/templates/searchProducts.html
+++ b/src/main/webapp/WEB-INF/templates/searchProducts.html
@@ -5,142 +5,171 @@
     <title>Search</title>
 
     <link rel="stylesheet" type="text/css" media="all"
-          href="../css/myStyle.css" th:href="@{/css/myStyle.css}" />
+          href="../../css/global.css" th:href="@{/css/global.css}" />
 </head>
 
 
 <body>
 
-<header>
-    <div>
+    <!-- HEADER -->
+    <header>
+        <div>
 
-        <a th:href="@{/GoToHome}" class="logo">
-            <img th:src="@{/images/website-logo.png}" alt="website-logo.png" src=""/>
-        </a>
+            <a th:href="@{/GoToHome}" href="#" class="logo">
+                <img th:src="@{/images/website-logo.png}" alt="website-logo.png" src="../../images/website-logo.png"/>
+            </a>
 
-        <div class="header-right">
-            <a th:href="@{/GoToHome}" class="active">Home</a>
-            <a th:href="@{/GoToShoppingCart}">Shopping cart</a>
-            <a th:href="@{/GoToOrders}">My Orders</a>
-            <a th:href="@{/logout}">Logout</a>
+            <div class="header-right">
+                <a th:href="@{/GoToHome}" class="active">Home</a>
+                <a th:href="@{/GoToShoppingCart}">Shopping cart</a>
+                <a th:href="@{/GoToOrders}">My Orders</a>
+                <a th:href="@{/logout}">Logout</a>
+            </div>
         </div>
+    </header>
+
+    <!-- SEARCH FORM -->
+    <div class="search-form">
+        <form th:class="styled-form" th:action=" ${#request.contextPath} + '/search/products' " method="GET">
+            <p>Cosa vuoi cercare di bello? </p>
+            <input th:placeholder="'Oasis..'" name="keyword" >
+            <input class="button" type="submit" value="vai!">
+        </form>
     </div>
-</header>
-
-<!-- Search form-->
-<div class="styled-form">
-    <br>
-    <br>
-    <form th:class="styled-form" th:action=" ${#request.contextPath} + '/search/products' " method="GET">
-        <p>Cosa vuoi cercare di bello? </p>
-        <input th:placeholder="'Oasis..'" name="keyword" >
-        <input class="button" type="submit" value="vai!">
-    </form>
-</div>
 
 
-<div th:if="${not #maps.isEmpty(products.supplierProductMap)}">
-    <table th:class="styled-table">
-        <caption>Products from the marketplace</caption>
-        <thead>
-            <tr>
-                <th colspan="2" scope="col">Product</th>
-                <th scope="col">Description</th>
-                <th scope="col">Cost</th>
-                <th colspan="2" scope="col">Supplier</th>
-                <th scope="col">Add to cart</th>
-            </tr>
-        </thead>
+    <div th:if="${not #maps.isEmpty(products.supplierProductMap)}">
+        <table class="styled-table">
+            <caption>Products from the marketplace</caption>
+            <thead>
+                <tr>
+                    <th colspan="2" scope="col">Product</th>
+                    <th scope="col">Description</th>
+                    <th scope="col">Cost</th>
+                    <th colspan="2" scope="col">Supplier</th>
+                    <th scope="col">Add to cart</th>
+                    <th colspan="4" scope="col"></th>
+                </tr>
+            </thead>
 
-        <tbody>
-            <tr th:each="productId : ${products.supplierProductMap.keySet()}" th:with="productInfo1=${products.supplierProductMap.get(productId)[0]}">
-                <td class="table-product-img">
-                    <a th:href="@{/search/products/ShowProductInfo(productId=${productId})}" >
-                        <img th:src="'https://tiw21marketplace.s3.eu-south-1.amazonaws.com/images/products/'+ ${productInfo1.productImagePath}" alt="Product image" src=""/>
-                    </a>
-                </td>
-                <td>
+            <tbody>
+                <tr th:each="productId : ${products.supplierProductMap.keySet()}" th:with="productInfo1=${products.supplierProductMap.get(productId)[0]}">
 
-                    <form th:class="styled-form" th:action=" ${#request.contextPath} + '/search/products/ShowProductInfo' " class="inline" method="POST" >
-                        <input type="hidden" name="productId" th:value="${productId}" value="Id prodotto">
-                        <input type="submit" th:class="button" name="productName" th:value="${productInfo1.productName}" value="Nome prodotto" class="link-button">
-                    </form>
-                </td>
-                <td th:text="${productInfo1.productDescription}"></td>
-                <td th:text="${productInfo1.supplierProductCost}"></td>  <!-- if product.isOnDiscount 'illimuna prezzo' -->
-                <td class="table-supplier-img">
-                    <img th:src="'https://tiw21marketplace.s3.eu-south-1.amazonaws.com/images/suppliers/'+ ${productInfo1.supplier.imagePath}" alt="Product image"/>
-                </td>
-                <td th:text="${productInfo1.supplierName}"></td>
-                <td>
-                    <form th:class="styled-form" th:action="${#request.contextPath} + '/products/AddToCart'"  th:object="${productInfo1}" method="POST">
-                        <input type="hidden" th:value="${productInfo1.productId}"    name="productId" />
-                        <input type="hidden" th:value="${productInfo1.supplierId}"   name="supplierId" />
-                        <input type="hidden" th:value="${productInfo1.supplierProductCost}"   name="supplierProductCost" />
-                        <input type="submit" th:class="button" value="One-click buy" />
-                    </form>
-                </td>
-                <td>
-                    <table th:if="${selectedProductId.equals(productInfo1.productId)}" th:each="supplierProduct : ${products.supplierProductMap.get(productId)}">
-                        <caption></caption>
-                        <thead>
-                        <tr>
-                            <th scope="col">Supplier</th>
-                            <th scope="col">Cost</th>
-                            <th scope="col">Rating</th>
-                            <th scope="col">Range</th>
-                            <th scope="col">Add to cart</th>
-                        </tr>
-                        </thead>
-                        <tr>
-                            <td th:text="${supplierProduct.supplier.supplierName}"> Venditore 0</td>
-                            <td th:text="${supplierProduct.supplierProductCost}">2000.00</td>
-                            <td th:text="${supplierProduct.supplier.supplierRating}">0.0</td>
-                            <td>
-                                <table>
-                                    <thead>
-                                    <tr>
-                                        <th scope="col">Range</th>
-                                        <th scope="col">minItem</th>
-                                        <th scope="col">maxItem</th>
-                                        <th scope="col">cost</th>
-                                    </tr>
-                                    </thead>
-                                    <tr th:each="range : ${supplierProduct.supplier.supplierShippingPolicy.ranges}" >
-                                        <td th:text="${supplierProduct.supplier.supplierShippingPolicy.ranges.indexOf(range) + 1}">1</td>
-                                        <td th:text="${range.minAmount}">1</td>
-                                        <td th:text="${range.maxAmount}">5</td>
-                                        <td th:text="${range.cost}">100,99</td>
-                                    </tr>
-                                </table>
-                            </td>
-                            <td>
-                                <form th:class="styled-form" th:action="${#request.contextPath} + '/products/AddToCart'" method="POST">
-                                    <label for="howMany">How many:</label>
-                                    <select name="howMany" id="howMany">
-                                        <option value="1">1</option>
-                                        <option value="2">2</option>
-                                        <option value="3">3</option>
-                                        <option value="4">4</option>
-                                        <option value="5">5</option>
-                                        <option value="6">6</option>
-                                        <option value="7">7</option>
-                                        <option value="8">8</option>
-                                        <option value="9">9</option>
-                                    </select>
-                                    <input type="hidden" th:value="${supplierProduct.productId}"    name="productId" />
-                                    <input type="hidden" th:value="${supplierProduct.supplierId}"   name="supplierId" />
-                                    <input type="hidden" th:value="${supplierProduct.supplierProductCost}"   name="supplierProductCost" />
-                                    <input type="submit" th:class="button" value="Add to cart">
-                                </form>
-                            </td>
-                        </tr>
-                    </table>
-                </td>
-            </tr>
-        </tbody>
-    </table>
-</div>
+                    <!-- IMMAGINE PRODOTTO -->
+                    <td class="table-product-img">
+                        <a th:href="@{/search/products/ShowProductInfo(productId=${productId})}" >
+                            <img th:src="'https://tiw21marketplace.s3.eu-south-1.amazonaws.com/images/products/'+ ${productInfo1.productImagePath}" alt="Product-image" src=""/>
+                        </a>
+                    </td>
+
+                    <!-- NOME PRODOTTO -->
+                    <td> <a class="clickable-link" th:href="@{/search/products/ShowProductInfo( productId=${productId} , productName=${productInfo1.productName} )}" th:text="${productInfo1.productName}"> Nome prodotto</a> </td>
+
+                    <!-- DESCRIZIONE PRODOTTO -->
+                    <td th:text="${productInfo1.productDescription}">No desc</td>
+
+                    <!-- PREZZO PRODOTTO -->
+                    <td>&euro; <span th:text="${#numbers.formatDecimal(productInfo1.supplierProductCost, 1, 2, 'COMMA')}">10.00</span> </td>
+
+                    <!-- IMMAGINE SUPPLIER -->
+                    <td class="table-supplier-img">
+                        <img th:src="'https://tiw21marketplace.s3.eu-south-1.amazonaws.com/images/suppliers/'+ ${productInfo1.supplier.imagePath}" alt="supplier-image"/>
+                    </td>
+
+                    <!-- NOME SUPPLIER -->
+                    <td th:text="${productInfo1.supplierName}">Supplier name</td>
+
+                    <!-- BUY BUTTON -->
+                    <td>
+                        <form th:action="${#request.contextPath} + '/products/AddToCart'"  th:object="${productInfo1}" method="POST">
+                            <input type="hidden" th:value="*{productId}"    name="productId" />
+                            <input type="hidden" th:value="*{supplierId}"   name="supplierId" />
+                            <input type="hidden" th:value="*{supplierProductCost}"   name="supplierProductCost" />
+                            <input type="submit" class="clickable-link" value="One-click buy" />
+                        </form>
+                    </td>
+
+                    <!-- TABLE CON INFO SUI VENDITORI-->
+                    <td>
+                        <table class="styled-table" th:if="${selectedProductId.equals(productInfo1.productId)}">
+                            <thead>
+
+                            <tr>
+                                <th scope="col">Supplier</th>
+                                <th scope="col">Cost</th>
+                                <th scope="col">Rating</th>
+                                <th scope="col">Free shipping from</th>
+                                <th scope="col">Range</th>
+                                <th scope="col">Add to cart</th>
+                            </tr>
+
+                            </thead>
+                            <tr th:each="supplierProduct : ${products.supplierProductMap.get(productId)}">
+
+                                <!-- NOME SUPPLIER -->
+                                <td th:text="${supplierProduct.supplier.supplierName}">Venditore 0</td>
+
+                                <!-- PREZZO PRODOTTO -->
+                                <td>&euro; <span th:text="${#numbers.formatDecimal(supplierProduct.supplierProductCost, 1, 2, 'COMMA')}">10.00</span> </td>
+
+                                <!-- RATING SUPPLIER -->
+                                <td th:text="${supplierProduct.supplier.supplierRating}">0.0</td>
+
+                                <!-- SUPPLIER FREE SHIPPING YES -->
+                                <td th:if="${supplierProduct.supplier.hasFreeShipping}" >&euro; <span th:text="${#numbers.formatDecimal(supplierProduct.supplier.freeShippingMinAmount, 1, 2, 'COMMA')}">10.00</span> </td>
+
+                                <!-- SUPPLIER FREE SHIPPING NO -->
+                                <td th:if="${!supplierProduct.supplier.hasFreeShipping}" th:text="'No'"></td>
+
+                                <!-- SUPPLIER RANGE COSTS -->
+                                <td>
+                                    <table class="styled-table">
+                                        <thead>
+                                        <tr>
+                                            <th scope="col">Range</th>
+                                            <th scope="col">minItem</th>
+                                            <th scope="col">maxItem</th>
+                                            <th scope="col">cost</th>
+                                        </tr>
+                                        </thead>
+                                        <tr th:each="range : ${supplierProduct.supplier.supplierShippingPolicy.ranges}" >
+                                            <td th:text="${supplierProduct.supplier.supplierShippingPolicy.ranges.indexOf(range) + 1}">1</td>
+                                            <td th:text="${range.minAmount}">1</td>
+                                            <td th:text="${range.maxAmount}">5</td>
+                                            <td>&euro; <span th:text="${#numbers.formatDecimal(range.cost, 1, 2, 'COMMA')}">10.00</span> </td>
+                                        </tr>
+                                    </table>
+                                </td>
+
+                                <!-- ADD TO CART FORM -->
+                                <td>
+                                    <form th:action="${#request.contextPath} + '/products/AddToCart'" method="POST">
+                                        <label for="howMany">How many:</label>
+                                        <select name="howMany" id="howMany">
+                                            <option value="1">1</option>
+                                            <option value="2">2</option>
+                                            <option value="3">3</option>
+                                            <option value="4">4</option>
+                                            <option value="5">5</option>
+                                            <option value="6">6</option>
+                                            <option value="7">7</option>
+                                            <option value="8">8</option>
+                                            <option value="9">9</option>
+                                        </select>
+                                        <input type="hidden" th:value="${supplierProduct.productId}"    name="productId" />
+                                        <input type="hidden" th:value="${supplierProduct.supplierId}"   name="supplierId" />
+                                        <input type="hidden" th:value="${supplierProduct.supplierProductCost}"   name="supplierProductCost" />
+                                        <input type="submit" class="clickable-link" value="Add to cart">
+                                    </form>
+                                </td>
+
+                            </tr>
+                        </table>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 
 <div th:if="${#maps.isEmpty(products.supplierProductMap)}">
     <br>
