--- a/src/main/webapp/WEB-INF/templates/shoppingCart.html
+++ b/src/main/webapp/WEB-INF/templates/shoppingCart.html
@@ -3,15 +3,19 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
+
   <title>Marketplace App</title>
   <meta charset="UTF-8">
 
-  <link rel="stylesheet" type="text/css" media="all"
-        href="../../css/global.css" th:href="@{/css/global.css}" />
+  <link rel="stylesheet" type="text/css" media="all" href="../../css/global.css" th:href="@{/css/global.css}" />
+
+  <link rel="icon" type="image/ico" th:href="@{/images/website-icon.ico}" href="../../images/website-icon.ico"/>
+
 </head>
 
 <body>
 
+  <!-- HEADER -->
   <header>
     <div>
       <a th:href="@{/GoToHome}" class="logo">
@@ -26,12 +30,13 @@
     </div>
   </header>
 
+  <!-- TITOLO -->
   <div class="title">
     <h1>Here's your shopping cart, <span th:text="${session.user.userName}">Amadeus</span> </h1>
   </div>
 
 
-
+  <!-- CARRELLO -->
   <div th:if="${ !#maps.isEmpty(session.shoppingCart.shoppingCartMap)}">
     <table  class="styled-table" style="width:100%">
       <caption style="lighting-color: #04aa6d">CART</caption>
@@ -48,7 +53,7 @@
 
         <tr th:each="product : ${session.shoppingCart.shoppingCartMap.get(supplierId)}" >
           <td class="table-product-img">
-              <img th:src="'https://tiw21marketplace.s3.eu-south-1.amazonaws.com/images/products/'+ ${product.productImagePath}" alt="Product image"/>
+              <img th:src="'https://tiw21marketplace.s3.eu-south-1.amazonaws.com/images/products/'+ ${product.productImagePath}" alt="Product image" src="../../images/prod-ex.jpeg"/>
           </td>
           <td th:text="${product.productName}">Prod1</td>
           <td th:text="${product.productDescription}">Desc1</td>
@@ -56,9 +61,9 @@
           <td>&euro; <span th:text="${#numbers.formatDecimal(product.supplierProductCost, 1, 2, 'COMMA')}">10.00</span> </td>
           <td th:text="${product.howMany}">5</td>
         </tr>
-        <tr th:class="active-row" th:with="totalamount=${session.shoppingCart.totalAmountBySupplier.get(supplierId)}">
+        <tr class="active-row" th:with="totalamount=${session.shoppingCart.totalAmountBySupplier.get(supplierId)}">
 
-          <td>Total amount on <span th:text="${supplierInfo.supplierName}">Suppl1</span> : &euro; <span th:text="${#numbers.formatDecimal(totalamount, 1, 2, 'COMMA')}">10.00</span></td>
+          <td>Total amount on <span th:text="${supplierInfo.supplierName}">Suppl1</span> &euro; <span th:text="${#numbers.formatDecimal(totalamount, 1, 2, 'COMMA')}">10.00</span></td>
 
           <td th:if="${ !supplierInfo.hasFreeShipping }"> <span th:text=" ${supplierInfo.supplierName}">Suppl1</span> doesn't offer free shipping </td>
 
@@ -76,19 +81,17 @@
                 </select>
               </label>
               <input type="hidden"  name="supplierId" th:value="${supplierId}" >
-              <input type="submit" class="clickable-link" value="Place order">
+              <input type="submit" class="clickable-link clickable-link-large" value="Place order">
             </form>
           </td>
         </tr>
-
-
 
 
       </tbody>
     </table>
   </div>
 
-
+  <!-- CARRELLO VUOTO -->
   <div th:if="${ #maps.isEmpty(session.shoppingCart.shoppingCartMap)}">
     Your shopping cart is empty!
   </div>
