--- a/src/main/webapp/css/login.css
+++ b/src/main/webapp/css/login.css
@@ -23,35 +23,31 @@
     /* border: 2px solid rgb(0, 0, 0); */
 }
 
-.form-group{
-    margin-bottom: 1rem;
-    width: 100%;
-    display: flex;
-    flex-direction: row; /* children flow as row */
-    justify-content: center; /* center flex childen */
+
+/*
+    Colored divs
+*/
+.green-div{
+    margin: 0 auto;
+    border: 2px solid #04aa6d;
+    border-radius: 6px;
+    box-shadow: 0 1rem 3rem rgba(0,0,0,0.175); /* x-offset y-offset radius color */
+    padding: 1rem;
 }
-.form-group > input {
-    padding: 0.5rem;
-    border-radius: 0 5px 5px 0;
-    border: 1px solid #d1d3e2;
-    color: #6e707e;
-    background-color: #fff;
-    font-weight: 200;
-    line-height: 1.5; /* 1.5 times the font size */
-    width: 80%;
+
+.green-div .form-group > input:hover{
+    border: 1px solid #04aa6d;
+    transition: 0.6s ease;
 }
-.form-group > label {
-    padding: 0.8rem;
-    color: #495057;
-    text-align: center;
-    white-space: nowrap; /* no new line for white spaces */
-    background-color: #e9ecef;
-    border: 1px solid #ced4da;
-    border-right: 0; /* reset border right, as input's one is already present */
-    font-weight: 200;
-    font-size: 0.6rem;
-    width: 20%;
+
+
+.green-div .form-group > input:focus{
+    border: 5px solid #04aa6d;
+    transition: 0.6s ease-out;
 }
+
+
+
 
 /*
     Buttons
@@ -61,22 +57,11 @@
     vertical-align: middle;
     border-radius: 5px;
     border-style: solid;
-}
-.btn-large{
-    padding: .8rem 2rem;
-    font-weight: 600;
-    font-size: 1rem;
-}
-.btn-medium{
     padding: .25rem 1rem;
     font-weight: 600;
     font-size: 1rem;
 }
-.btn-small{
-    padding: .25rem 1rem;
-    font-weight: 600;
-    font-size: 0.8rem;
-}
+
 .btn-green {
     color: #fff;
     background-color: #04aa6d;
